--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,5 +12,8 @@
 @import 'blocks/_header.scss';
 @import 'blocks/_buttons.scss';
 @import 'blocks/_advantages.scss';
+@import 'blocks/titles.scss';
+@import 'blocks/consultation.scss';
+@import 'blocks/forms.scss';
 
 @import 'base/media';
