--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -8,6 +8,7 @@
     font-size: 12px;
     color: #FFFFFF;
     text-transform: uppercase;
+    margin-top: 2px;
     &_main {
         margin-top: 67px;
         width: 300px;
