--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -74,8 +74,10 @@
             margin: 0 auto;
             .slick-slide {
                 img {
-                    width: 60%;
+                    width: 100%;
                     padding: 0;
+                    display: block;
+                    margin: 0 auto;
                 }
             }
             .slick-track {
@@ -158,7 +160,9 @@
             margin: 0 auto;
             .slick-slide {
                 img {
-                    width: 55%;
+                    width: 100%;
+                    display: block;
+                    margin: 0 auto;
                 }
             }
         }
