--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -11,6 +11,8 @@
         }
     }
     .slick-slide img {
+        width: 100%;
+        height: 100%;
         display: block;
         margin: 0 auto;
     }
@@ -31,13 +33,13 @@
         left: auto;
     }
     button.slick-prev {
-        background: url('../../icons/left_red_arrow.png') center (center / cover) no-repeat;
+        background: url('../icons/left_red_arrow.png') center (center / cover) no-repeat;
         width: 31px;
         height: 50px;
         font-size: 0;
     }
     button.slick-next {
-        background: url('../../icons/right_red_arrow.png') center (center / cover) no-repeat;
+        background: url('../icons/right_red_arrow.png') center (center / cover) no-repeat;
         width: 31px;
         height: 50px;
         font-size: 0;
