--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -30,15 +30,8 @@
     .carousel {
         &__slider {
             position: relative;
-            width: 600px;
+            width: 80%;
             margin: 0 auto;
-            .slick-slide {
-                img {
-                    width: 90%;
-                    display: block;
-                    margin: 0 auto;
-                }
-            }
         }
     }
 };
@@ -70,11 +63,12 @@
     .carousel {
         &__slider {
             position: relative;
-            width: 480px;
+            width: 80%;
             margin: 0 auto;
             .slick-slide {
                 img {
                     width: 100%;
+                    height: 100%;
                     padding: 0;
                     display: block;
                     margin: 0 auto;
@@ -156,11 +150,12 @@
     .carousel {
         &__slider {
             position: relative;
-            width: 380px;
+            width: 100%;
             margin: 0 auto;
             .slick-slide {
                 img {
                     width: 100%;
+                    height: 100%;
                     display: block;
                     margin: 0 auto;
                 }
