--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -9,6 +9,7 @@
     color: #FFFFFF;
     text-transform: uppercase;
     margin-top: 2px;
+    text-align: center;
     &_main {
         margin-top: 67px;
         width: 300px;
@@ -16,11 +17,15 @@
         font-weight: 500;
         font-size: 16px;
         text-transform: uppercase;
-        text-align: center;
     }
     &_submit {
         width: 100%;
         height: 55px;
         font-size: 16px;
+    }
+    &_mini {
+        width: 135px;
+        height: 45px;
+        font-size: 14px;
     }
 }
