--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,5 +17,6 @@
 @import 'blocks/consultation.scss';
 @import 'blocks/forms.scss';
 @import 'blocks/carousel.scss';
+@import 'blocks/catalog.scss';
 
 @import 'base/media';
