--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -38,6 +38,12 @@
     }
     &__content {
         margin-top: 60px;
+        display: none;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        &_active {
+            display: flex;
+        }
     }
     &-item {
         width: 300px;
@@ -45,6 +51,8 @@
         background: #FFFFFF;
         border: 2px solid #E8E8E8;
         padding: 22px 25px;
+        overflow: hidden;
+        margin-bottom: 20px;
         &__img {
             max-width: 100%;
             height: 200px;
@@ -73,6 +81,7 @@
             text-decoration: underline;
             color: $main-color;
             text-align: center;
+            text-transform: uppercase;
             &:hover {
                 color: $main-color;
             }
@@ -110,6 +119,68 @@
             color: #FFFFFF;
             border: none;
             border-radius: 8px;
+        }
+        &__wrapper {
+            display: flex;
+            width: calc(200% + 40px);
+        }
+        &__content {
+            width: 50%;
+            margin-right: 0px;
+            padding-right: 5px;
+            transform: translateX(-100%);
+            transition: 0.5s all;
+            &_active {
+                margin-right: 20px;
+                transform: translateX(0%);
+            }
+        }
+        &__list {
+            position: relative;
+            width: 50%;
+            padding-right: 20px;
+            padding-left: 19px;
+            margin-bottom: 0px;
+            margin-left: 20px;
+            list-style-type: none;
+            transform: translateX(0%);
+            transition: 0.5s all;
+            &_active {
+                transform: translateX(-100%);
+                margin-left: 0px;
+            }
+            li {
+                position: relative;
+                font-weight: 300;
+                font-size: 14px;
+                color: #555555;
+                margin-bottom: 20px;
+                &:before {
+                    content: '';
+                    position: absolute;
+                    width: 7px;
+                    height: 7px;
+                    background-color: $main-color;
+                    top: 6px;
+                    left: -17px;
+                }
+            }
+        }
+        &__back {
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(calc(-50% - 19px));
+            display: block;
+            color: $main-color;
+            font-weight: 500;
+            font-size: 14px;
+            text-align: center;
+            text-transform: uppercase;
+            text-decoration: underline;
+            &:hover {
+                color: $main-color;
+            }
         }
     }
 }
