review section done

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,5 +18,6 @@
 @import 'blocks/forms.scss';
 @import 'blocks/carousel.scss';
 @import 'blocks/catalog.scss';
+@import 'blocks/review';
 
 @import 'base/media';
