--- a/src/sass/blocks/_review.scss
+++ b/src/sass/blocks/_review.scss
@@ -24,7 +24,7 @@
         color: #646464;
     }
     &__descr {
-        width: 680px;
+        // width: 680px;
         margin-top: 10px;
         font-weight: 300;
         font-size: 16px;
