--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,5 +19,6 @@
 @import 'blocks/carousel.scss';
 @import 'blocks/catalog.scss';
 @import 'blocks/review';
+@import 'blocks/footer';
 
 @import 'base/media';
