--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -10,6 +10,13 @@
     text-transform: uppercase;
     margin-top: 2px;
     text-align: center;
+    transition: 0.6s all;
+    &:hover {
+        box-shadow: 3px 3px 10px 3px $main-color;
+        background-color: orange;
+        color: darkred;
+        font-weight: 700;
+    }
     &_main {
         margin-top: 67px;
         width: 300px;
