--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -10,7 +10,10 @@
     text-transform: uppercase;
     margin-top: 2px;
     text-align: center;
-    transition: 0.6s all;
+    transition: 0.4s all;
+    &:focus {
+        outline: none;
+    }
     &:hover {
         box-shadow: 0px 0px 10px 3px $main-color;
         background-color: orange;
