--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -240,4 +240,10 @@
             width: 300px;
         }
     }
+    .modal {
+        width: 300px;
+    }
+    .feed-form {
+        width: 250px
+    }
 };
