added basic CSS3 animation heartbeat

--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -36,5 +36,11 @@
                 text-transform: uppercase;
             }         
         }
-    }    
+    }
+    &__animated {
+        animation: heartbeat 1.5s ease infinite;
+        &:hover {
+            animation-play-state: paused;
+        }
+    }
 }
