--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,6 +9,8 @@
 
 @import 'base/_variables';
 @import 'base/_mixins.scss';
+@import 'base/_animation';
+
 @import 'blocks/_promo.scss';
 @import 'blocks/_header.scss';
 @import 'blocks/_buttons.scss';
