review animation added

--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -1,6 +1,7 @@
 .advantages {
     min-height: 475px;
     padding: 73px 0px 65px 0px;
+    background-color: #f5f5f5;
     &__wrapper {
         margin-top: 60px;
         display: flex;
