web-site validation done

--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -149,7 +149,7 @@
                 transform: translateX(-100%);
                 margin-left: 0px;
             }
-            li {
+            div {
                 position: relative;
                 font-weight: 300;
                 font-size: 14px;
