--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,6 +7,11 @@
     margin: 0 auto;
 }
 
+@import 'libs/bootstrap-reboot.min';
+@import 'libs/font';
+@import 'libs/slick';
+@import 'libs/animate';
+
 @import 'base/_variables';
 @import 'base/_mixins.scss';
 @import 'base/_animation';
